--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,10 @@ ol {
 }
 
 .header-cont {
-  border-bottom: 1px solid #e7e9fc;
-  width: 100%;
-  height: 72px;
   background: #fff;
 }
 
 .header-cont nav {
-  text-align: center;
-  justify-content: space-between;
-  position: relative;
 }
 
 .logo {
@@ -75,7 +69,6 @@ ol {
   font-style: normal;
 }
 .address-cont ul {
-  display: flex;
 }
 
 .address-item {
@@ -97,10 +90,6 @@ ol {
 
 .main-page-cont {
   background-color: #2e2f42;
-  width: 100%;
-  height: 600px;
-  text-align: center;
-  justify-content: center;
 }
 
 .main-page-title {
@@ -115,8 +104,6 @@ ol {
 .main-page-button {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
-  border-radius: 4px;
-  padding: 16px 32px;
 
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -134,6 +121,9 @@ ol {
 
 .main-page-button:focus {
   background-color: #404bbf;
+}
+
+.abvan-cont {
 }
 
 .advan-list-item-title {
@@ -164,14 +154,11 @@ ol {
   font-size: 36px;
   line-height: 111%;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
 }
 
 .team-list {
-  margin: auto;
-  justify-content: space-between;
 }
 
 .team-list-item {
@@ -184,7 +171,6 @@ ol {
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
 }
 
@@ -194,7 +180,6 @@ ol {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #434455;
 }
 
@@ -204,7 +189,6 @@ ol {
   font-size: 36px;
   line-height: 111%;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
 }
