--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,10 @@ ol {
   line-height: 107%;
   letter-spacing: 0.02em;
   color: #fff;
+  text-align: center;
 }
 
 .main-page-button {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
 
   font-family: "Roboto", sans-serif;
@@ -155,6 +155,7 @@ ol {
   line-height: 111%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
   text-transform: capitalize;
 }
 
@@ -190,6 +191,7 @@ ol {
   line-height: 111%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
   text-transform: capitalize;
 }
 
